# agent-interface-protocol

./: .gitignore  CONTRIBUTING.md  README.md  agent-interface-protocol.md  agent-nexus.md  atmux (5).md  pyproject.toml
.github/workflows/: ci.yml
aip/: __init__.py  aip_shim.py  cli.py  hook_configs.py  hooks.py  mcp_server.py  tasks.py  tmux.py  workspace.py
atmux/: __init__.py  cli.py  mcp_server.py  tasks.py  tmux.py  workspace.py
docs/: ARCHITECTURE.md  EXPANDED_SPEC_SUMMARY_AND_PLAN.md  FILE_ORGANIZATION.md  QUICKREF.md  REFERENCE.md  SESSION_REPORT.md  TESTING_SUMMARY.md
examples/: two-agent-review.sh
scripts/: demo.sh  quickstart.sh  run_tests.sh
tests/: test_aip_shim.py  test_all_backends.py  test_cli.py  test_hooks.py  test_mcp.py  test_tasks.py  test_tmux.py  test_workspace.py
tests/integration/: conftest.py  test_agent_lifecycle.py  test_concurrent_claiming.py  test_full_cycle.py  test_lease_expiry.py  test_live_backends.py  test_live_core.py  test_mcp_live.py  test_multi_backend_collab.py  test_orchestrator_recovery.py
workspace/tasks/pending/: task-001.md
