[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atmux"
version = "0.1.0"
description = "Filesystem and tmux primitives for ATMUX agent orchestration"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
atmux = "atmux.cli:main"
atmux-mcp = "atmux.mcp_server:main"

[tool.setuptools.packages.find]
include = ["atmux*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
