[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-interface-protocol"
version = "0.3.0"
description = "Filesystem and tmux primitives for multi-agent orchestration across 11 CLI backends"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]
keywords = ["agents", "ai", "orchestration", "tmux", "mcp", "multi-agent", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/dev-boz/agent-interface-protocol"
Repository = "https://github.com/dev-boz/agent-interface-protocol"
Issues = "https://github.com/dev-boz/agent-interface-protocol/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
aip = "aip.cli:main"
aip-mcp = "aip.mcp_server:main"

[tool.setuptools.packages.find]
include = ["aip*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "live_tmux: exercises the real tmux-backed CLI and MCP flows",
    "live_cli: exercises installed AI CLI backends in real tmux panes",
]
